Bug 618624 - Enable "doesn't contain" and "isn't" for news filters. r=jcranmer